k8s-routergo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: routergo
  namespace: routergo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: routergo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: routergo
                port:
                  number: 80
